# sql-composer

./: .env  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  docker-compose.yml  env.database.sh
.github/workflows/: ci.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
crates/cargo-sqlc/: Cargo.toml
crates/cargo-sqlc/src/: main.rs
crates/sql-composer/: Cargo.toml
crates/sql-composer-duckdb/: Cargo.toml
crates/sql-composer-duckdb/src/: lib.rs
crates/sql-composer-mysql/: Cargo.toml
crates/sql-composer-mysql/src/: lib.rs
crates/sql-composer-postgres/: Cargo.toml
crates/sql-composer-postgres/src/: lib.rs
crates/sql-composer-rusqlite/: Cargo.toml
crates/sql-composer-rusqlite/src/: lib.rs
crates/sql-composer-sqlx/: Cargo.toml
crates/sql-composer-sqlx/src/: lib.rs
crates/sql-composer/src/: clippy.rs  composer.rs  driver.rs  error.rs  lib.rs  mock.rs  types.rs
crates/sql-composer/src/parser/: bind.rs  command.rs  compose.rs  mod.rs  template.rs
docs/: complex_query_optimization_tutorial.org  org.css
docs/themes/: org-minimal-theme.setup
examples/lego/: Cargo.toml  README.md
examples/lego/.sql/filters/: by_category.sql  by_color.sql
examples/lego/.sql/inventory/: update_spare_counts.sql
examples/lego/.sql/queries/: city_sets.sql  technic_sets.sql  theme_set_parts.sql
examples/lego/.sql/reports/: combined_theme_sets.sql  count_theme_parts.sql  insert_set_summary.sql
examples/lego/.sql/sets/: select_category_parts.sql  select_colored_parts.sql  select_set_parts.sql  select_sets_by_themes.sql
examples/lego/.sql/shared/: set_part_details.sql
examples/lego/migrations/: 20240101000000_example_tables.sql
examples/lego/sqlc/filters/: by_category.sqlc  by_color.sqlc
examples/lego/sqlc/inventory/: update_spare_counts.sqlc
examples/lego/sqlc/queries/: city_sets.sqlc  technic_sets.sqlc  theme_set_parts.sqlc
examples/lego/sqlc/reports/: combined_theme_sets.sqlc  count_theme_parts.sqlc  insert_set_summary.sqlc
examples/lego/sqlc/sets/: select_category_parts.sqlc  select_colored_parts.sqlc  select_set_parts.sqlc  select_sets_by_themes.sqlc
examples/lego/sqlc/shared/: filtered_set_parts.sqlc  set_part_details.sqlc
examples/lego/src/: main.rs
sql-composer/: Cargo.toml
sql-composer-cli/: Cargo.toml  Makefile
sql-composer-cli/src/: main.rs
sql-composer-direct/: Cargo.toml
sql-composer-direct/src/: lib.rs
sql-composer-mysql/: Cargo.toml
sql-composer-mysql/src/: lib.rs
sql-composer-mysql/src/tests/values/: double-include.tql
sql-composer-postgres/: Cargo.toml
sql-composer-postgres/src/: lib.rs
sql-composer-postgres/src/tests/values/: simple.tql
sql-composer-rusqlite/: Cargo.toml
sql-composer-rusqlite/src/: lib.rs
sql-composer-rusqlite/src/tests/: simple-template.tql
sql-composer-serde/: Cargo.toml
sql-composer-serde/src/: lib.rs
sql-composer/ffi/: Cargo.toml
sql-composer/ffi/src/: lib.rs
sql-composer/src/: composer.rs  error.rs  lib.rs  parser.rs  plan  tests.rs  types.rs
sql-composer/src/composer/: direct.rs  mysql.rs  mysql_async.rs  postgres.rs  rusqlite.rs  tokio_postgres.rs
sql-composer/src/tests/values/: include.tql
sql-composer/src/types/: item.rs  mod.rs  parsed_item.rs  parsed_item_sql.rs  parsed_sql.rs  parsed_sql_composition.rs  parsed_sql_macro.rs  parsed_sql_statement.rs  position.rs  span.rs  sql.rs  sql_composition.rs  sql_composition_alias.rs  sql_macro.rs  sql_statement.rs  value.rs
src/: composer.rs  error.rs  expander.rs  lib.rs  parser.rs  tests.rs  types.rs
src/binder/: direct.rs  mod.rs  mysql.rs  postgres.rs  rusqlite.rs
src/composer/: direct.rs  mysql.rs  postgres.rs  rusqlite.rs
src/expander/: direct.rs  mod.rs  mysql.rs  postgres.rs  rusqlite.rs
src/tests/: include-template.tql  simple-template.tql
src/tests/values/: double-include.tql  include.tql  simple.tql
src/types/: value.rs
