[package]
name = "sql-composer-cli"
version = "0.1.0"
authors = ["Kenny Flegal <soulstompp@gmail.com>"]
edition = "2018"

[[bin]]
name = "sqlc"
path = "src/main.rs"

[dependencies]
quicli = "0.4.0"
sql-composer={ path="../sql-composer" }
structopt = "0.2.15"
mysql = "16.0.2"
rusqlite = "0.17.0"
postgres = "0.15.2"
serde = "1.0.89"
serde_json = "1.0.39"
serde_postgres = "0.1.3"
serde-transcode = "1.1.0"
serde-value = "0.6.0"
