[package]
name = "sql-composer-direct"
version = "0.1.0"
authors = ["Kenny Flegal <soulstompp@gmail.com>"]
edition = '2018'

[features]
composer-serde = ["serde", "serde-value"]

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
sql-composer={ path="../sql-composer" }
serde = { version = "1.0.89", optional = true }
serde-value = { version = "0.6.0", optional = true }
