[package]
name = "sql-composer-postgres"
version = "0.1.0"
authors = ["Kenny Flegal <soulstompp@gmail.com>"]
edition = '2018'

[features]
default = ["sql-composer/postgres"]
composer-serde = ["serde-value"]

[dependencies]
dotenv = "0.15.0"
postgres = { version = "0.15.2" }
serde-value = { version = "0.6.0", optional = true }
sql-composer = { path="../sql-composer", version = "0.1.0" }
