[package]
name = "sql-composer-rusqlite"
version = "0.1.0"
authors = ["Kenny Flegal <soulstompp@gmail.com>"]
edition = '2018'

[features]
composer-serde = ["serde-value"]

[dependencies]
dotenv = "0.15.0"
rusqlite = "0.17.0"
sql-composer={ path="../sql-composer" }
serde-value = { version = "0.6.0", optional = true }
time = "0.1.40"
