[package]
name = "sql-composer"
version = "0.1.0"
authors = ["Kenny Flegal <soulstompp@gmail.com>"]
edition = '2018'

[features]
dbd-mysql = ["mysql"]
dbd-mysql-async = ["mysql_async", "tokio"]
dbd-postgres = ["postgres"]
dbd-rusqlite = ["rusqlite"]
composer-serde = ["serde", "serde-value"]

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
error-chain = "0.12.1"
futures = { version = "0.1.7", optional = true }
futures-state-stream = { version = "0.2.0", optional = true }
nom = "5.0.1"
nom_locate = "1.0.0"
mysql = { version = "17.0.0", optional = true }
mysql_async = { version = "0.20.0", optional = true }
rusqlite = { version = "0.17.0", optional = true }
postgres = { version = "0.15.2", optional = true }
serde = { version = "1.0.89", optional = true }
serde-value = { version = "0.6.0", optional = true }
time = "0.1.40"
tokio = { version = "0.1.22",  optional = true }
tokio-core = { version = "0.1.17", optional = true }
