[package]
name = "sql-composer"
version = "0.1.0"
authors = ["Kenny Flegal <soulstompp@gmail.com>"]
edition = '2018'

[features]
dbd-postgres = ["postgres"]

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
error-chain = "0.12.1"
nom = "5.0.1"
nom_locate = "1.0.0"
postgres = { version = "0.15.2", optional = true }
time = "0.1.40"
