[package]
name = "sql-composer"
version = "0.1.0"
authors = ["Kenny Flegal <soulstompp@gmail.com>"]
edition = '2018'

[features]
composer-serde = []

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
error-chain = "0.12.1"
nom = "5.0.1"
nom_locate = "1.0.0"
mysql = { version = "16.0.2", optional = true }
rusqlite = { version = "0.17.0", optional = true }
postgres = { version = "0.15.2", optional = true }
