[package]
name = "cargo-sqlc"
version = "0.0.3"
description = "Cargo subcommand for composing SQL templates with sql-composer"
keywords = ["sql", "cargo", "subcommand", "composer"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/soulstompp/sql-composer"
license = "MIT"
edition = "2021"

[[bin]]
name = "cargo-sqlc"
path = "src/main.rs"

[dependencies]
sql-composer = { version = "0.0.3", path = "../sql-composer" }
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
tempfile = "3"
