[package]
name = "sql-composer-sqlx"
version = "0.0.2"
description = "sqlx integration for sql-composer: verify composed SQL against a database"
keywords = ["sql", "sqlx", "composer", "verification"]
categories = ["database"]
repository = "https://github.com/soulstompp/sql-composer"
license = "MIT"
edition = "2021"

[dependencies]
sql-composer = { version = "0.0.2", path = "../sql-composer" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio"] }
sqlparser = { version = "0.53", optional = true }
tokio = { version = "1", features = ["rt"] }
thiserror = "2"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
validate = ["dep:sqlparser"]
