[package]
name = "sql-composer-ffi"
version = "0.1.0"
authors = ["Andrew Grangaard <granny-github@ofb.net>"]
edition = "2018"

[lib]
name = "sql_composer_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# ffi-support = ...
# lazy_static = "1.3.0"

[dependencies.sql-composer]
path = ".."
